{
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Player",
            "id": "bae8922b-8165-4515-8938-e00c52094362",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "3aa7a563-ad9b-41ff-8534-e66ec551c20f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpToSegment",
                    "type": "Value",
                    "id": "6e46d9ca-0662-409f-ba09-82a29f524af6",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "103eb397-5f6a-4f21-a186-b037bcacfe94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "6dc82366-8651-4ff1-8211-91d6e22d3ae5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "08cb24b0-3bbd-4400-9536-e032eb969915",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrow",
                    "id": "13529e80-190c-42ef-acfb-4cb57dba99f7",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "JumpToSegment",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b8b1b85f-116a-42ab-8285-4cc7ec026a0b",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "JumpToSegment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "7688b824-bc18-499f-b560-a0251f7a4ddd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "JumpToSegment",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "04a8b3d2-9878-4f21-9995-275c21cc1a72",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Phone",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "65a3b2f0-0951-47d8-be75-af8a1b8ff323",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Phone",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Phone",
            "bindingGroup": "Phone",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}